<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="128dp"
    android:layout_margin="10dp"
    card_view:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/cake_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_cake_black_24dp" />

        <TextView
            android:id="@+id/descTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/cake_iv"
            android:gravity="center"
            android:text="@string/testString"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="#f50057" />


        <TextView
            android:id="@+id/servings_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descTv"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/ic_servings_black_24dp"
            android:gravity="right|center"
            android:text="@string/x_8"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="#CC000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/addWidget_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/servings_tv"
            android:gravity="center"
            android:text="@string/add_widget"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="#CC424242" />


    </RelativeLayout>
</android.support.v7.widget.CardView>

